Actualizacion de proyecto. mejora de formularios, adicion de app de clima

--- a/principal/templates/principal/acerca.html
+++ b/principal/templates/principal/acerca.html
@@ -4,6 +4,8 @@
 {% block content %}
   <div class="p-4 bg-white rounded shadow-sm">
     <h2 class="h4">Acerca</h2>
-    <p>Esta es una página de ejemplo para practicar URLs y navegación.</p>
+    <p>Esta es una página web de practica para el uso de APIs, el framework
+       de django y las distintas caracteristicas olvidadas de python
+    </p>
   </div>
 {% endblock %}
